# libfam-atomic

./: .gitignore  AUTHORS  Makefile.am  configure.ac  fam_atomic.c  fam_atomic.h  fam_atomic.pc.in  rbtree.h
archive/libfam-atomic1/: fam_atomic.c
debian/: changelog  control  copyright  files  gbp.conf  libfam-atomic1-dev.install  libfam-atomic1.install  libfam-atomic2-dev.install  libfam-atomic2.install  rules  watch
debian/libfam-atomic/DEBIAN/: control  md5sums
doc/: Makefile.am  fam_atomic.txt  fam_atomic_128_compare_and_store.txt  fam_atomic_128_compare_and_store_unpadded.txt  fam_atomic_128_compare_store.txt  fam_atomic_128_read.txt  fam_atomic_128_read_unpadded.txt  fam_atomic_128_swap.txt  fam_atomic_128_swap_unpadded.txt  fam_atomic_128_write.txt  fam_atomic_128_write_unpadded.txt  fam_atomic_32_compare_and_store.txt  fam_atomic_32_compare_and_store_unpadded.txt  fam_atomic_32_compare_store.txt  fam_atomic_32_fetch_add.txt  fam_atomic_32_fetch_and.txt  fam_atomic_32_fetch_and_add.txt  fam_atomic_32_fetch_and_add_unpadded.txt  fam_atomic_32_fetch_and_unpadded.txt  fam_atomic_32_fetch_or.txt  fam_atomic_32_fetch_or_unpadded.txt  fam_atomic_32_fetch_xor.txt  fam_atomic_32_fetch_xor_unpadded.txt  fam_atomic_32_read.txt  fam_atomic_32_read_unpadded.txt  fam_atomic_32_swap.txt  fam_atomic_32_swap_unpadded.txt  fam_atomic_32_write.txt  fam_atomic_32_write_unpadded.txt  fam_atomic_64_compare_and_store.txt  fam_atomic_64_compare_and_store_unpadded.txt  fam_atomic_64_compare_store.txt  fam_atomic_64_fetch_add.txt  fam_atomic_64_fetch_and.txt  fam_atomic_64_fetch_and_add.txt  fam_atomic_64_fetch_and_add_unpadded.txt  fam_atomic_64_fetch_and_unpadded.txt  fam_atomic_64_fetch_or.txt  fam_atomic_64_fetch_or_unpadded.txt  fam_atomic_64_fetch_xor.txt  (+16 more)
rcu-rbtree/: Makefile.am  arch.h  arch_generic.h  compat_futex.c  compiler.h  futex.h  rcu_config.h  rcurbtree.h  static_urcu-bp.h  static_urcu-pointer.h  static_wfqueue.h  system.h  test.c  uatomic.h  uatomic_generic.h  urcu-bp.c  urcu-bp.h  urcu-call-rcu-impl.h  urcu-call-rcu.h  urcu-defer-impl.h  urcu-defer.h  urcu-pointer.c  urcu-pointer.h  urcu-rbtree.c  wfqueue.h
tests/: .gitignore  Makefile.am  README  fam_atomic_example.c  fam_atomic_multi_node_test.c  fam_atomic_single_node_test.c
tmas/: fam_atomic_driver.c
